retention/main/default/objects/Queue_Purge_Log__c/Queue_Purge_Log__c.object-meta.xml
<CustomObject>
    <label>Queue Purge Log</label>
    <nameField>
        <displayFormat>PURGE-{00000000}</displayFormat>
        <label>Purge Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Purge Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>