retention/main/default/objects/Queue_Purge_Log__c/fields/ChunkCount__c.field-meta.xml
<CustomField>
    <fullName>ChunkCount__c</fullName>
    <description>Number of batch execute() chunks processed during this run.</description>
    <label>Chunk Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>