retention/main/default/objects/Queue_Purge_Log__c/fields/DeleteStrategy__c.field-meta.xml
<CustomField>
    <fullName>DeleteStrategy__c</fullName>
    <defaultValue>&quot;HARD_DELETE&quot;</defaultValue>
    <description>Snapshot of the strategy that ran. Phase 1 always = HARD_DELETE. Added now so Phase 2 archive strategies can be added without a schema migration.</description>
    <label>Delete Strategy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>