retention/main/default/objects/Queue_Purge_Log__c/fields/DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>DurationSeconds__c</fullName>
    <label>Duration (s)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>