retention/main/default/objects/Queue_Purge_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>