retention/main/default/objects/Queue_Purge_Log__c/fields/PolicyDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PolicyDeveloperName__c</fullName>
    <description>MDT DeveloperName of the policy that ran. Indexed so the "latest run per policy" aggregation stays cheap.</description>
    <externalId>true</externalId>
    <label>Policy Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>