retention/main/default/objects/Queue_Purge_Log__c/fields/PolicyLabel__c.field-meta.xml
<CustomField>
    <fullName>PolicyLabel__c</fullName>
    <description>Snapshot of the policy label at run time (MDT may evolve; log is immutable).</description>
    <label>Policy Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>