retention/main/default/objects/Queue_Purge_Log__c/fields/RecordsDeleted__c.field-meta.xml
<CustomField>
    <fullName>RecordsDeleted__c</fullName>
    <label>Records Deleted</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>