retention/main/default/objects/Queue_Purge_Log__c/fields/RecordsEvaluated__c.field-meta.xml
<CustomField>
    <fullName>RecordsEvaluated__c</fullName>
    <label>Records Evaluated</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>