retention/main/default/objects/Queue_Purge_Log__c/fields/RecordsSkipped__c.field-meta.xml
<CustomField>
    <fullName>RecordsSkipped__c</fullName>
    <label>Records Skipped</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>