retention/main/default/objects/Queue_Purge_Log__c/fields/RunByUser__c.field-meta.xml
<CustomField>
    <fullName>RunByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Purge Logs</relationshipLabel>
    <relationshipName>PurgeLogs</relationshipName>
    <type>Lookup</type>
</CustomField>