retention/main/default/objects/Queue_Purge_Log__c/fields/RunCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>RunCompletedAt__c</fullName>
    <label>Run Completed At</label>
    <type>DateTime</type>
</CustomField>