retention/main/default/objects/Queue_Purge_Log__c/fields/RunStartedAt__c.field-meta.xml
<CustomField>
    <fullName>RunStartedAt__c</fullName>
    <label>Run Started At</label>
    <type>DateTime</type>
</CustomField>