retention/main/default/objects/Queue_Purge_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PARTIAL</fullName>
                <default>true</default>
                <label>PARTIAL</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>DRY_RUN</fullName>
            </value>
            <value>
                <fullName>SKIPPED_GLOBAL_CAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>