retention/main/default/objects/Queue_Purge_Log__c/fields/TriggeredBy__c.field-meta.xml
<CustomField>
    <fullName>TriggeredBy__c</fullName>
    <label>Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SCHEDULED</fullName>
                <default>true</default>
                <label>SCHEDULED</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
            <value>
                <fullName>DRY_RUN_MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>