retention/main/default/objects/Queue_Purge_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RunStartedAt__c</columns>
    <columns>PolicyLabel__c</columns>
    <columns>Status__c</columns>
    <columns>RecordsDeleted__c</columns>
    <columns>RecordsSkipped__c</columns>
    <columns>DurationSeconds__c</columns>
    <columns>TriggeredBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>